--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.8",
+    "@types/aws-lambda": "^8.10.93",
     "@types/node": "20.9.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
+    "esbuild": "^0.18.17",
     "aws-cdk": "2.106.1",
     "ts-node": "^10.9.1",
     "typescript": "~5.2.2"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.67.0",
+    "@aws-sdk/lib-dynamodb": "^3.79.0",
+    "@aws-sdk/util-dynamodb": "^3.303.0",
     "aws-cdk-lib": "2.106.1",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
