--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "schema": "typescript-json-schema --noExtraProps --required --refs false -o ./shared/types.schema.json  \"./shared/types.d.ts\" \"*\""
   },
   "devDependencies": {
-    "@types/jest": "^29.5.8",
     "@types/aws-lambda": "^8.10.93",
+    "@types/jest": "^29.5.8",
     "@types/node": "20.9.0",
+    "aws-cdk": "2.106.1",
+    "esbuild": "^0.18.17",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "esbuild": "^0.18.17",
-    "aws-cdk": "2.106.1",
     "ts-node": "^10.9.1",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "typescript-json-schema": "^0.62.0"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.67.0",
